# Perekrestok_UI

./: .env  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
pages/: test_authorization_negative_page.py  test_choosing_delivery_address_page.py  test_city_selection_page.py  test_clear_to_cart_page.py  test_empty_cart_page.py  test_feedback_page.py  test_text_checking_page.py
tests/: conftest.py  test_discounts.py  test_perek.py
utils/: attach.py
