[tool.poetry]
name = "perekrestok-ui"
version = "0.1.0"
description = ""
authors = ["Julia Isaacson <alisa.holmes@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "8.3.2"
selene = "2.0.0rc9"
allure-pytest = "2.13.5"
python-dotenv = "0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--alluredir=allure-results --clean-alluredir"

